# Icicle_Simulator

./: .gitignore  CMakeLists.txt  Logger.h  README.md  action.cpp  action.h  autoAttack.cpp  autoAttack.h  buff.cpp  buff.h  creators.hpp  info.cpp  info.h  initializer.hpp  listener.hpp  main.cpp  main_Beam.cpp  main_Icicle.cpp  mainwindow.cpp  mainwindow.h  person.cpp  person.h  skill.cpp  skill.h
ExtendExample/: actionExample.md  autoAttackExample.md  buffExample.md  initializerExample.md  listenerExample.md  personExample.md  skillExample.md
FightingFantasy/: Buff.cpp  Buff.h  Skill.cpp  Skill.h
Mage/: Action.cpp  Action.h  AutoAttack.cpp  AutoAttack.h  Buff.cpp  Buff.h  Initializer.hpp  Person.cpp  Person.h  Skill.cpp  Skill.h
Mage/Beam/: Action.cpp  Action.h  AutoAttack.cpp  AutoAttack.h  Buff.cpp  Buff.h  Initializer.hpp  Person.cpp  Person.h  Skill.cpp  Skill.h
Mage/Icicle/: Action.cpp  Action.h  AutoAttack.cpp  AutoAttack.h  Buff.cpp  Buff.h  Initializer.hpp  Person.cpp  Person.h  Skill.cpp  Skill.h
core/: Action.cpp  Action.h  AutoAttack.cpp  AutoAttack.h  Buff.cpp  Buff.h  Info.cpp  Info.h  Initializer.hpp  Listener.hpp  Logger.cpp  Logger.h  Person.cpp  Person.h  Skill.cpp  Skill.h  Statistics.cpp  Statistics.h  creators.hpp
